horizontal overflow scroll fix

--- a/stacks-v3/src/App.css
+++ b/stacks-v3/src/App.css
@@ -5,6 +5,7 @@
 
 #root {
   height: 100%;
+  overflow-x: hidden;
 }
 
 .stack{
